--- a/src/static/index.html
+++ b/src/static/index.html
@@ -10,6 +10,7 @@
   <title>Affordable Culture</title>
   <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/themes/base/jquery-ui.css"/>
   <link rel="stylesheet" href="stylesheets/photohunt.css"/>
+  <link rel="stylesheet" href="stylesheets/affordableculture.css"/>
   <link rel="stylesheet" href="stylesheets/gh-buttons.css"/>
   <!-- IE Fix for HTML5 Tags -->
   <!--[if lt IE 9]>
@@ -38,8 +39,8 @@
     <div id="topHeader">
 
       <div id="search" >
-        <input type="text" id="country" placeholder="enter country here"/>
-        <button id="countryButton" ng-click="search()">Search by country</button>
+        <input type="text" ng-model="keywords" placeholder="desired location"/>
+        <button ng-click="search(term)">search</button>
       </div>
 
       <div id="profileInfo" >
@@ -122,6 +123,15 @@
         </li>
       </ul>
     </div>
+
+    <div id="allAttractions" class="contentGroup" ng-show="allAttractions.length">
+      <h3>All Photos</h3>
+      <ul id="allAttractions">
+        <li ng-repeat="attraction in allAttractions|orderBy:ordering">
+          <attraction item="attraction"></attraction>
+        </li>
+      </ul>
+    </div>
   </section>
 
   <nav ng-show="themes" id="boxThemes">
@@ -129,7 +139,8 @@
     <h3>Recent Themes</h3>
       <ul id="recentThemes">
         <li ng-repeat="(key, value) in themes|limitTo:10">
-          <span><a ng-click="selectTheme(key)">{{value.displayName}}</a></span><span class="date">{{value.created|date:'longDate'}}</span>
+          <span><a ng-click="selectTheme(key)">{{value.displayName}}</a></span>
+          <span class="date">{{value.created|date:'longDate'}}</span>
         </li>
       </ul>
     </div>
