added voting v1 modified ini script for deleting all data

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -40,7 +40,7 @@
 
       <div id="search" >
         <input type="text" ng-model="keywords" placeholder="desired location"/>
-        <button ng-click="search(term)">search</button>
+        <button ng-click="search()">search</button>
       </div>
 
       <div id="profileInfo" >
