--- a/src/static/index.html
+++ b/src/static/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:ng="http://angularjs.org">
-<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
+<!-- paulirish.com/2008/conditional-css-vs-css-hacks-answer-neither/ -->
 <!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
 <!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
 <!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
@@ -9,9 +9,9 @@
   <meta charset="utf-8" />
   <title>Affordable Culture</title>
   <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/themes/base/jquery-ui.css"/>
-  <link rel="stylesheet" href="stylesheets/photohunt.css"/>
-  <link rel="stylesheet" href="stylesheets/affordableculture.css"/>
-  <link rel="stylesheet" href="stylesheets/gh-buttons.css"/>
+  <link rel="stylesheet" href="css/photohunt.css"/>
+  <link rel="stylesheet" href="css/affordableculture.css"/>
+  <link rel="stylesheet" href="css/gh-buttons.css"/>
   <!-- IE Fix for HTML5 Tags -->
   <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
