--- a/src/static/index_new.html
+++ b/src/static/index_new.html
@@ -1,54 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
-<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
+<html lang="en" xmlns:ng="http://angularjs.org">
+<!-- paulirish.com/2008/conditional-css-vs-css-hacks-answer-neither/ -->
 <!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
 <!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
 <!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
   <head>
-      <meta charset="utf-8">
-      <title>Affordable Culture. Pay less, see more.</title>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="description" content="">
-      <meta name="author" content="">
-
-
+  <meta charset="utf-8" />
+    <title>Affordable Culture. Pay less, see more.</title>
+    <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/themes/base/jquery-ui.css"/>
+	<!-- Custom styles for this template -->
     <!-- Bootstrap core CSS -->
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
-	<link href="instr.css" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="carousel.css" rel="stylesheet">
+    <link href="css/carousel.css" rel="stylesheet">
 
   <!-- IE Fix for HTML5 Tags -->
   <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
-      <script src="instr.js"></script>
-      <script type='text/javascript'>
+  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places"></script>
 
-      </script>
+  <script src="js/jquery.filedrop.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/services.js"></script>
+  <script src="js/controllers.js"></script>
+  <script src="js/filters.js"></script>
+  <script src="js/directives.js"></script>
+  <script type='text/javascript'>
+  function startApp() {
+    console.log('start');
+    angular.bootstrap(document, ['affordableCulture']);
+  }
+  </script>
+
   </head>
-<!-- NAVBAR
-================================================== -->
-  <body>
-    <script id="attraction-template" type="text/x-handlebars-template">
-      <div class="profile-card"> <div class="profile-info margin-10"> <div class="profile-info-details"> <img class="img-circle profile-img" src="{{attraction.img}}" alt="{{attraction.name}}"> <h2>{{attraction.name}}</h2> <h3><i class="glyphicon glyphicon-map-marker"></i>{{attraction.address}}</h3> <h3><i class="glyphicon glyphicon-usd"></i>{{attraction.time}}</h3> <h3><i class="glyphicon glyphicon-tags"></i>{{attraction.tags}}</h3></div> <div class="more-info"> <ul>
-      <li><a href="{{attraction.wikipedia}}"><img src="smicons/wikipedia-icon.png" alt="Wikipedia" width="32"></i></a></li>
-      <li><a href="{{attraction.googlepluslocal}}"><img src="smicons/googlepluslocal-icon.png" alt="Google+ Local" width="32"></i></a></li>
-      <li><a href="{{attraction.tripadvisor}}"><img src="smicons/tripadvisor-icon.png" alt="TripAdvisor" width="32"></i></a></li>
-      <li><a href="{{attraction.yelp}}"><img src="smicons/yelp-icon.png" alt="Yelp" width="32"></i></a></li>
-      <li><a href="{{attraction.facebook}}"><img src="smicons/facebook-icon.png" alt="Facebook" width="32"></i></a></li>
-      <li><a href="{{attraction.twitter}}"><img src="smicons/twitter-icon.png" alt="Twitter" width="32"></i></a></li>
-      <li><a href="{{attraction.youtube}}"><img src="smicons/youtube-icon.png" alt="YouTube" width="32"></i></a></li>
-      <li><a href="{{attraction.instagram}}"><img src="smicons/instagram-icon.png" alt="Instagram" width="32"></i></a></li>
-      <li><a href="{{attraction.android}}"><img src="smicons/android-icon.png" alt="Android" width="32"></i></a></li>
-      <li><a href="{{attraction.ios}}"><img src="smicons/ios-icon.png" alt="iOS" width="32"></i></a></li>
-    </ul> </div> </div> </div>
-    </script>
- 
+<body ng-controller="AffordableCultureCtrl" ng-cloak>
+
     <div class="navbar-wrapper">
       <div class="container">
 
@@ -59,7 +51,7 @@
     	      <span class="icon-bar"></span>
     	      <span class="icon-bar"></span>
     	    </button>
-            <a class="navbar-brand" href="#">Affordable Culture</a>
+            <a class="navbar-brand" href="/">Affordable Culture</a>
             <div class="nav-collapse collapse">
               <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
@@ -67,11 +59,33 @@
                 <li><a href="#contact">About</a></li>
               </ul>
             </div>			
-			<form class="navbar-form pull-right">
-				<input type="text" class="form-control" id="country" style="width: 400px;">
-				<button type="submit" class="btn btn-default" id="countryButton">Go!</button>
-			</form>
+
+
+
+            <div id="profileInfo" class="navbar-form pull-right">
+                <span id="signin" ng-show="immediateFailed">
+                  <span id="myGsignin"></span>
+                </span>
+
+                <span ng-show="userProfile">
+                <a target="_blank" href="{{userProfile.googlePublicProfileUrl}}">
+                  <span class="name">{{userProfile.googleDisplayName}}</span>
+                  <img ng-src="{{userProfile.googlePublicProfilePhotoUrl|profilePicture:32}}" />
+                </a>
+                 <button class="button danger disconnect btn btn-default" ng-click="disconnect()" style="">
+                   Disconnect
+                 </button>
+                </span>
           </div>
+
+			<form class="navbar-form pull-right">
+				<input type="text" class="form-control" id="country" style="width: 400px;" ng-model="keywords" placeholder="desired location">
+				<button type="submit" class="btn btn-default" id="countryButton"  ng-click="search()">Go!</button>
+			</form>
+
+          </div>
+
+
         </div>
 
       </div>
@@ -90,7 +104,7 @@
       </ol>
       <div class="carousel-inner">
         <div class="item active">
-          <img data-src="holder.js/1500x500/auto/#777:#7a7a7a/text:First slide" alt="">
+          <img data-src="holder.js/1500x500/auto/#777" alt="">
           <div class="container">
 		  <div class="carousel-caption">
           <div class="row">
@@ -114,7 +128,7 @@
           </div>
         </div>
         <div class="item">
-          <img data-src="holder.js/1500x500/auto/#777:#7a7a7a/text:Second slide" alt="">
+          <img data-src="holder.js/1500x500/auto/#777" alt="">
           <div class="container">
 		  <div class="carousel-caption">
           <div class="row">
@@ -138,7 +152,7 @@
 		  </div>
         </div>
 		<div class="item">
-          <img data-src="holder.js/1500x500/auto/#777:#7a7a7a/text:Third slide" alt="">
+          <img data-src="holder.js/1500x500/auto/#777" alt="">
           <div class="container">
             <div class="carousel-caption">
           <div class="row">
@@ -195,7 +209,17 @@
     <div class="container marketing">
 
 	<div class="profile-list-area"></div>
-	  
+
+    <div id="allAttractions" class="contentGroup" ng-show="allAttractions.length">
+      <h3>All Attractions</h3>
+      <ul id="allAttractions">
+        <li ng-repeat="attraction in allAttractions|orderBy:ordering">
+          <attraction item="attraction"></attraction>
+        </li>
+      </ul>
+    </div>
+
+
       <!-- FOOTER -->
       <footer>
         <p>&copy; 2013 Affordable Culture &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
@@ -211,7 +235,7 @@
     <!-- script src="assets/js/jquery.js"></script -->
     <script src="bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/holder.js"></script>
-	<script src="js/search-attr.js"></script>
+
   <script type="text/javascript">
   window.___gcfg = {
     parsetags: 'explicit'
