--- a/src/static/index.html
+++ b/src/static/index.html
@@ -16,6 +16,7 @@
   <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
+  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.3/angular.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
@@ -83,13 +84,13 @@
   <section id="notification">{{notification}}</section>
 
   <section id="photoList">
-   <ng-switch on="highlightedPhoto">
+   <ng-switch on="highlightedAttraction">
       <span ng-switch-when="undefined"></span>
       <div ng-switch-default id="selectedPhoto" class="contentGroup">
-        <h3>Highlighted photo</h3>
+        <h3>Highlighted Attraction</h3>
         <ul>
           <li>
-            <photo item="highlightedPhoto" delete-photo="deletePhoto(photoId)">
+            <photo item="highlightedAttraction" delete-attraction="deletePhoto(photoId)">
           </li>
         </ul>
       </div>
@@ -109,11 +110,11 @@
         </li>
       </ul>
     </div>
-    <div id="friendsPhotos" class="contentGroup" ng-show="friendsPhotos.length">
+    <div id="friendsPhotos" class="contentGroup" ng-show="friendsAttractions.length">
       <h3>Photos from Friends</h3>
       <ul id="friendsPhotos">
-        <li ng-repeat="attraction in friendsPhotos|orderBy:ordering">
-          <attraction item="attraction" delete-photo="deletePhoto(photoId)"></attraction>
+        <li ng-repeat="attraction in friendsAttractions|orderBy:ordering">
+          <attraction item="attraction" delete-photo="deletePhoto(friendsAttractionId)"></attraction>
         </li>
       </ul>
     </div>
