fixed caroucell placeholder

--- a/src/static/index_new.html
+++ b/src/static/index_new.html
@@ -144,17 +144,17 @@
 		  <div class="carousel-caption">
           <div class="row">
         <div class="col-md-4">
-          <img class="img-circle" data-src="http://placehold.it/140x140">
+          <img class="img-circle" src="http://placehold.it/140x140">
           <h2>Stuttgart</h2>
           <p><a class="btn btn-default btn-invert" href="#Stuttgart">See more &raquo;</a></p>
         </div><!-- /.col-md-4 -->
         <div class="col-md-4">
-          <img class="img-circle" data-src="http://placehold.it/140x140">
+          <img class="img-circle" src="http://placehold.it/140x140">
           <h2>Munich</h2>
           <p><a class="btn btn-default btn-invert" href="#Munich">See more &raquo;</a></p>
         </div><!-- /.col-md-4 -->
         <div class="col-md-4">
-          <img class="img-circle" data-src="http://placehold.it/140x140">
+          <img class="img-circle" src="http://placehold.it/140x140">
           <h2>Berlin</h2>
           <p><a class="btn btn-default btn-invert" href="#Berlin">See more &raquo;</a></p>
         </div><!-- /.col-md-4 -->
@@ -167,17 +167,17 @@
             <div class="carousel-caption">
           <div class="row">
         <div class="col-md-4">
-          <img class="img-circle" data-src="http://placehold.it/140x140">
+          <img class="img-circle" src="http://placehold.it/140x140">
           <h2>London</h2>
           <p><a class="btn btn-default btn-invert" href="#London">See more &raquo;</a></p>
         </div><!-- /.col-md-4 -->
         <div class="col-md-4">
-          <img class="img-circle" data-src="http://placehold.it/140x140">
+          <img class="img-circle" src="http://placehold.it/140x140">
           <h2>Birmingham</h2>
           <p><a class="btn btn-default btn-invert" href="#Birmingham">See more &raquo;</a></p>
         </div><!-- /.col-md-4 -->
         <div class="col-md-4">
-          <img class="img-circle" data-src="http://placehold.it/140x140">
+          <img class="img-circle" src="http://placehold.it/140x140">
           <h2>Glasgow</h2>
           <p><a class="btn btn-default btn-invert" href="#Glasgow">See more &raquo;</a></p>
         </div><!-- /.col-md-4 -->
@@ -190,17 +190,17 @@
             <div class="carousel-caption">
           <div class="row">
         <div class="col-md-4">
-          <img class="img-circle" data-src="http://placehold.it/140x140">
+          <img class="img-circle" src="http://placehold.it/140x140">
           <h2>Rom</h2>
           <p><a class="btn btn-default btn-invert" href="#Rom">See more &raquo;</a></p>
         </div><!-- /.col-md-4 -->
         <div class="col-md-4">
-          <img class="img-circle" data-src="http://placehold.it/140x140">
+          <img class="img-circle" src="http://placehold.it/140x140">
           <h2>Florence</h2>
           <p><a class="btn btn-default btn-invert" href="#Florence">See more &raquo;</a></p>
         </div><!-- /.col-md-4 -->
         <div class="col-md-4">
-          <img class="img-circle" data-src="http://placehold.it/140x140">
+          <img class="img-circle" src="http://placehold.it/140x140">
           <h2>Venice</h2>
           <p><a class="btn btn-default btn-invert" href="#Venice">See more &raquo;</a></p>
         </div><!-- /.col-md-4 -->
