--- a/src/static/index_new.html
+++ b/src/static/index_new.html
@@ -26,7 +26,7 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places&key=AIzaSyCGnHVgULUsmKxSovoizEzinSF1ypdExUk"></script>
 
   <script src="js/jquery.filedrop.js"></script>
   <script src="js/app.js"></script>
@@ -68,9 +68,9 @@
       <li>
      <form class="navbar-form navbar-right" role="search">
       <div class="form-group">
-        <input type="text" class="form-control" ng-model="keywords" placeholder="desired location" style="width: 357px;">
+        <input id="search" type="text" class="form-control" ng-model="keywords" placeholder="desired location" style="width: 357px;">
       </div>
-      <button type="submit" class="btn btn-default" id="countryButton"  ng-click="search()">Go!</button>
+      <button type="submit" class="btn btn-default" id="countryButton" ng-click="search()">Go!</button>
     </form>
 
       </li>
@@ -216,6 +216,7 @@
 
     <!-- Wrap the rest of the page in another container to center all the content. -->
 
+    <input id="searchByLocation" value="" ng-model="locationToSearch" ng-change="searchByLocation"/>
     <div class="container marketing">
 
 	<div class="profile-list-area"></div>
@@ -242,6 +243,18 @@
     <!-- script src="assets/js/jquery.js"></script -->
     <script src="bootstrap/js/bootstrap.min.js"></script>
     <!--script src="assets/js/holder.js"></script-->
+
+<script type="text/javascript">
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-45882358-1', 'gcdc2013-affordable-culture.appspot.com');
+  ga('send', 'pageview');
+
+</script>
+
 
   <script type="text/javascript">
   window.___gcfg = {
