--- a/src/static/index_new.html
+++ b/src/static/index_new.html
@@ -216,7 +216,7 @@
 
     <!-- Wrap the rest of the page in another container to center all the content. -->
 
-    <input id="searchByLocation" value="" ng-model="locationToSearch" ng-change="searchByLocation" style="display: none"/>
+    <input id="searchByLocation" value="" ng-model="locationToSearch" ng-change="searchByLocation" type="hidden"/>
     <div class="container marketing">
 
 	<div class="profile-list-area"></div>
