--- a/src/static/index_new.html
+++ b/src/static/index_new.html
@@ -17,7 +17,7 @@
 	<link href="css/style.css" rel="stylesheet">
 	<link href="css/affordableculture.css" rel="stylesheet">
     <link href="css/carousel.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,100italic' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Roboto:400,100italic' rel='stylesheet' type='text/css'>
 
   <!-- IE Fix for HTML5 Tags -->
   <!--[if lt IE 9]>
