--- a/src/static/index_new.html
+++ b/src/static/index_new.html
@@ -121,17 +121,17 @@
 		  <div class="carousel-caption">
           <div class="row">
         <div class="col-md-4">
-          <img class="img-circle" src="img/san-francisco.jpg">
+          <img class="img-circle" src="/img/san-francisco.jpg">
           <h2>San Francisco</h2>
           <p><a class="btn btn-default btn-invert" href="#/search/San Francisco">See more &raquo;</a></p>
         </div><!-- /.col-md-4 -->
         <div class="col-md-4">
-          <img class="img-circle" src="img/new-york.jpg">
+          <img class="img-circle" src="/img/new-york.jpg">
           <h2>New York</h2>
           <p><a class="btn btn-default btn-invert" href="#!/search/New York">See more &raquo;</a></p>
         </div><!-- /.col-md-4 -->
         <div class="col-md-4">
-          <img class="img-circle" src="img/los-angeles.jpg">
+          <img class="img-circle" src="/img/los-angeles.jpg">
           <h2>Los Angeles</h2>
           <p><a class="btn btn-default btn-invert" href="#!/search/Los Angeles">See more &raquo;</a></p>
         </div><!-- /.col-md-4 -->
@@ -144,17 +144,17 @@
 		  <div class="carousel-caption">
           <div class="row">
         <div class="col-md-4">
-          <img class="img-circle" src="http://placehold.it/140x140">
+          <img class="img-circle" src="/img/140x140.gif">
           <h2>Stuttgart</h2>
           <p><a class="btn btn-default btn-invert" href="#Stuttgart">See more &raquo;</a></p>
         </div><!-- /.col-md-4 -->
         <div class="col-md-4">
-          <img class="img-circle" src="http://placehold.it/140x140">
+          <img class="img-circle" src="/img/140x140.gif">
           <h2>Munich</h2>
           <p><a class="btn btn-default btn-invert" href="#Munich">See more &raquo;</a></p>
         </div><!-- /.col-md-4 -->
         <div class="col-md-4">
-          <img class="img-circle" src="http://placehold.it/140x140">
+          <img class="img-circle" src="/img/140x140.gif">
           <h2>Berlin</h2>
           <p><a class="btn btn-default btn-invert" href="#Berlin">See more &raquo;</a></p>
         </div><!-- /.col-md-4 -->
@@ -167,17 +167,17 @@
             <div class="carousel-caption">
           <div class="row">
         <div class="col-md-4">
-          <img class="img-circle" src="http://placehold.it/140x140">
+          <img class="img-circle" src="/img/140x140.gif">
           <h2>London</h2>
           <p><a class="btn btn-default btn-invert" href="#London">See more &raquo;</a></p>
         </div><!-- /.col-md-4 -->
         <div class="col-md-4">
-          <img class="img-circle" src="http://placehold.it/140x140">
+          <img class="img-circle" src="/img/140x140.gif">
           <h2>Birmingham</h2>
           <p><a class="btn btn-default btn-invert" href="#Birmingham">See more &raquo;</a></p>
         </div><!-- /.col-md-4 -->
         <div class="col-md-4">
-          <img class="img-circle" src="http://placehold.it/140x140">
+          <img class="img-circle" src="/img/140x140.gif">
           <h2>Glasgow</h2>
           <p><a class="btn btn-default btn-invert" href="#Glasgow">See more &raquo;</a></p>
         </div><!-- /.col-md-4 -->
@@ -190,17 +190,17 @@
             <div class="carousel-caption">
           <div class="row">
         <div class="col-md-4">
-          <img class="img-circle" src="http://placehold.it/140x140">
+          <img class="img-circle" src="/img/140x140.gif">
           <h2>Rom</h2>
           <p><a class="btn btn-default btn-invert" href="#Rom">See more &raquo;</a></p>
         </div><!-- /.col-md-4 -->
         <div class="col-md-4">
-          <img class="img-circle" src="http://placehold.it/140x140">
+          <img class="img-circle" src="/img/140x140.gif">
           <h2>Florence</h2>
           <p><a class="btn btn-default btn-invert" href="#Florence">See more &raquo;</a></p>
         </div><!-- /.col-md-4 -->
         <div class="col-md-4">
-          <img class="img-circle" src="http://placehold.it/140x140">
+          <img class="img-circle" src="/img/140x140.gif">
           <h2>Venice</h2>
           <p><a class="btn btn-default btn-invert" href="#Venice">See more &raquo;</a></p>
         </div><!-- /.col-md-4 -->
@@ -216,7 +216,7 @@
 
     <!-- Wrap the rest of the page in another container to center all the content. -->
 
-    <input id="searchByLocation" value="" ng-model="locationToSearch" ng-change="searchByLocation" type="hidden"/>
+    <input id="searchByLocation" value="" ng-model="locationToSearch" ng-change="searchByLocation" type="text" style="display: none"/>
     <div class="container marketing">
 
 	<div class="profile-list-area"></div>
